# pivovar

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  README.cz.md  README.md  babel.cfg  chart.dia  pivovar-update.service  pivovar.cfg  pivovar.service  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
pivovar/: __init__.py  config.py  jsonrpc.py  phases.py  pivovar.cfg  set_aliases_m103.py  unipi.py  update.py  wash.py  wash_machine.py  wash_machine_io.py  webserver.py
pivovar/static/: i18n-setup.js  pivovar.html  pivovar.js
pivovar/te485/: scale.py  te485_tool.py
pivovar/templates/: base.html  index.html  wash.html
pivovar/translations/cs/LC_MESSAGES/: messages.po
te485_support_files/: evok.conf
te485_support_files/hw_definitions/: te485.yaml
tests/: test_set_aliases_m103.py  test_unipi.py  test_update.py  test_wash.py  themock.py
