[metadata]
name = pivovar
author = Jaroslav Henner
author-email = jhenner@redhat.com
summary = Brewery automation
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
;home-page = https://launchpad.net/pbr
;project_urls =
;    Bug Tracker = https://bugs.launchpad.net/pbr/
;    Documentation = https://docs.openstack.org/pbr/
;    Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = GNU GPL3
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Manufacturing
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    brewery

[entry_points]
console_scripts =
    set_aliases_m103 = pivovar.set_aliases_m103:main
    pivovar = pivovar.webserver:main
    wash = pivovar.wash:main
